Revision history for FusionInventory agent

2.3.0
General:
* various UTF8 encoding fixes

BSD:
* Megaraid and 3ware RAID controller support (Egor Morozov)

Linux:
* Megaraid controller support (Egor Morozov)

2.2.3  Mon, 25 Jun 2012 21:36:29 +0200
General:
* Fix battery voltage and capacity retrieval
* Add --timeout option

MacOSX:
* Fix global memory and CPU inventory
* Fix drives inventory

Linux:
* LXC support (Egor Morozov)

2.2.2  Wed, 30 May 2012 16:56:43 +0200
General:
* Improve README
* Fix Screen.pm syntax error
* Add a test_requires dependency on LWP::Protocol::https

Windows:
* fix command execution

7ff3260 fix warning if getDevicesFromUdev returns nothing

Linux:
* detect Virtuozzo VM (Alexander Evseev)

2.2.1  Thu, 24 May 2012 14:39:50 +0200
General:
* failure encoding with UTF8 content when using Fusion protocol (#1663)
* wrong CSS path (#1580)
* missing test suite dependency (#1575)
* improve CPU details (#1597)
* --no-category process support (#1630)
* replace IS64BIT software property with more general ARCH property (#1581)
* sync EDID parsing code with mandriva
* more EDID manufacturer codes

Windows:
* various encoding issues (#1550)
* network addresses collecting failure (#1549)
* inventory all the KB on Win Vista/7 (#1668, #197, #706)
* Store the XML file with the local codepage (#272)

Virtualization:
* wrong character in Xen machine ID (#1562)
* additional disk emulation types for qemu and kvm support (#1630)

BSD:
* multiple network addresses per interface support (#1565)

Solaris:
* no swap/memory informations for unknown hardware (#1594)
* solaris container zone bug (#1586)
* sparc T3-1 CPU support (#1583)
* solaris 8/9/10 swap bug (#1577)

Linux:
* bad name for physical volumes (#1587)
* missing volume group ID (#1585)
* wrong volume group ID (#1584)
* duplicate volume groups (#1582)
* fix Lsilogic raid controller support (#1630)
* get device name from udev file content, not file name (#1630)