@@ -4,6 +4,7 @@ use strict;
 use warnings;
 
 use English qw(-no_match_vars);
+use Net::Domain qw(hostfqdn hostdomain);
 
 sub isEnabled {
     return 1;
@@ -15,7 +16,9 @@ sub doInventory {
     my $inventory = $params{inventory};
 
     $inventory->setOperatingSystem({
-        KERNEL_NAME => $OSNAME
+            KERNEL_NAME => $OSNAME,
+            FQDN => hostfqdn(),
+            DNS_DOMAIN => hostdomain()
     });
 }
 
